// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFaq > 3 FAQ entries 1`] = `
"<section class="codex-editorial-section" id="typical-faq">
    <h2>FAQ</h2>
    <div class="codex-editorial-faq">
      <details>
            <summary>What is RFID?</summary>
            <p>Radio-frequency identification — wireless tag-and-reader tech.</p>
          </details><details>
            <summary>How far can a UHF RFID tag be read?</summary>
            <p>Typically 3–10 m for passive UHF tags; up to 30 m for fixed portals.</p>
          </details><details>
            <summary>Are Walmart and Target RFID requirements interchangeable?</summary>
            <p>Mostly yes for chip and inlay; differences are in placement and EDI.</p>
          </details>
    </div>
  </section>"
`;

exports[`renderFaq > single FAQ entry 1`] = `
"<section class="codex-editorial-section" id="test-faq">
    <h2>FAQ</h2>
    <div class="codex-editorial-faq">
      <details>
            <summary>What is RFID?</summary>
            <p>Radio-frequency identification — wireless tag-and-reader tech.</p>
          </details>
    </div>
  </section>"
`;

exports[`renderResourceCard > full: 2 links, second with description 1`] = `
"<section class="codex-card codex-editorial-card">
    <h2>Hotel keycard solutions</h2>
    <p>MIFARE Classic, DESFire EV3, and custom-printed RFID hotel keycards.</p>
    <div class="codex-editorial-link-list">
      <a class="codex-editorial-link-card" href="/products/rfid-cards/">
            <strong>RFID cards</strong>
            
          </a><a class="codex-editorial-link-card" href="/products/rfid-tags/">
            <strong>RFID tags</strong>
            <span>Industrial RAIN RFID tags for warehouse asset tracking.</span>
          </a>
    </div>
  </section>"
`;

exports[`renderResourceCard > minimal: 1 link without description 1`] = `
"<section class="codex-card codex-editorial-card">
    <h2>RFID products</h2>
    <p>Browse our RFID product catalog.</p>
    <div class="codex-editorial-link-list">
      <a class="codex-editorial-link-card" href="/products/rfid-cards/">
            <strong>RFID cards</strong>
            
          </a>
    </div>
  </section>"
`;

exports[`renderResourceGrid > full: 2 cards 1`] = `
"<section class="codex-editorial-section codex-editorial-resource-shell" id="full-resources">
    <h2>Useful next pages</h2>
    <p class="codex-editorial-section-intro">Use these linked product, guide and comparison pages to keep the next click specific and practical.</p>
    <div class="codex-editorial-resource-grid">
      <section class="codex-card codex-editorial-card">
    <h2>RFID products</h2>
    <p>Browse our RFID product catalog.</p>
    <div class="codex-editorial-link-list">
      <a class="codex-editorial-link-card" href="/products/rfid-cards/">
            <strong>RFID cards</strong>
            
          </a>
    </div>
  </section><section class="codex-card codex-editorial-card">
    <h2>Hotel keycard solutions</h2>
    <p>MIFARE Classic, DESFire EV3, and custom-printed RFID hotel keycards.</p>
    <div class="codex-editorial-link-list">
      <a class="codex-editorial-link-card" href="/products/rfid-cards/">
            <strong>RFID cards</strong>
            
          </a><a class="codex-editorial-link-card" href="/products/rfid-tags/">
            <strong>RFID tags</strong>
            <span>Industrial RAIN RFID tags for warehouse asset tracking.</span>
          </a>
    </div>
  </section>
    </div>
  </section>"
`;

exports[`renderResourceGrid > minimal: 1 card 1`] = `
"<section class="codex-editorial-section codex-editorial-resource-shell" id="test-resources">
    <h2>Useful next pages</h2>
    <p class="codex-editorial-section-intro">Use these linked product, guide and comparison pages to keep the next click specific and practical.</p>
    <div class="codex-editorial-resource-grid">
      <section class="codex-card codex-editorial-card">
    <h2>RFID products</h2>
    <p>Browse our RFID product catalog.</p>
    <div class="codex-editorial-link-list">
      <a class="codex-editorial-link-card" href="/products/rfid-cards/">
            <strong>RFID cards</strong>
            
          </a>
    </div>
  </section>
    </div>
  </section>"
`;

exports[`renderTable > minimal 2-col 3-row table 1`] = `
"<div class="codex-scroll-region codex-editorial-table-wrap" tabindex="0" role="region" aria-label="Comparison table — scroll horizontally to see more columns">
    <table class="codex-editorial-table" data-sortable="true">
      <thead><tr><th scope="col" ><span class="codex-th-label">Chip</span></th><th scope="col" data-sort-col="1" aria-sort="none" tabindex="0" role="columnheader button"><span class="codex-th-label">Memory</span><span class="codex-th-indicator" aria-hidden="true"></span></th></tr></thead>
      <tbody><tr><th scope="row">NTAG213</th><td>144 B</td></tr><tr><th scope="row">NTAG215</th><td>504 B</td></tr><tr><th scope="row">NTAG216</th><td>888 B</td></tr></tbody>
    </table>
  </div>"
`;

exports[`renderTrustSignals > static output (no input) 1`] = `
"<section class="codex-trust-signals">
    <div class="codex-trust-stats">
      <div class="codex-trust-stat">
        <strong>10+</strong>
        <span>Years RFID Manufacturing</span>
      </div>
      <div class="codex-trust-stat">
        <strong>ISO 9001</strong>
        <span>Certified Factory</span>
      </div>
      <div class="codex-trust-stat">
        <strong>500+</strong>
        <span>Enterprise Clients</span>
      </div>
      <div class="codex-trust-stat">
        <strong>50+</strong>
        <span>Countries Served</span>
      </div>
    </div>
    <p class="codex-trust-note">Proud Tek is a Shenzhen-based RFID &amp; NFC manufacturer supplying hotel chains, transit operators, event venues and retail brands worldwide. Every order includes free samples, RF testing and dedicated project support.</p>
  </section>"
`;
